--- a/monitoreo/templates/index.html
+++ b/monitoreo/templates/index.html
@@ -25,19 +25,19 @@
         <br>
         <div class="cuerpo">
             <img src="/archivos/imagen/familias.png" class="familias" alt="Familias">
-            <span class="cant">600+</span><br>
+            <span class="cant">{{familias}}</span><br>
             <span>familias</span>
         </div>
         <div class="cuerpo">
             <img src="/archivos/imagen/organizaciones.png" class="organizaciones" alt="Familias">
             <br>
-            <span class="cant">7</span>
+            <span class="cant">{{organizacion}}</span>
             <span>Organizaciones</span>
         </div>
         <div class="cuerpo">
-            <span class="personas">245</span>
+            <span class="personas">{{mujeres}}</span>
             <img src="/archivos/imagen/mujeres.png" alt="Mujeres" class="personas">
-            <span class="personas">380</span>
+            <span class="personas">{{hombres}}</span>
             <img src="/archivos/imagen/hombres.png" alt="Hombres" class="personas">
         </div>
         <br>
