--- a/monitoreo/templates/index.html
+++ b/monitoreo/templates/index.html
@@ -18,6 +18,8 @@
 </script>
 {% endblock %}
 
+{% block filtros%} {% endblock %}
+
 {% block index %}
 <div class="actualmente">
     <div class="datos">
