--- a/monitoreo/templates/simas/familia.html
+++ b/monitoreo/templates/simas/familia.html
@@ -6,9 +6,14 @@
 
                         <div id="contenedor_igual">
                             <a href="/educacion" class="educacion">Educación</a>
+                            <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
                             <a href="/salud" class="educacion">Salud</a>
-                            <a href="/energia"class="agua">Energia</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/luz"class="agua">Energia</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
                             <a href="/agua"class="luz">Agua de consumo</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
                         </div>
                         <div class="separador"></div>
+                        <br></br>
 {% endblock %}
