--- a/monitoreo/templates/simas/inicio.html
+++ b/monitoreo/templates/simas/inicio.html
@@ -75,20 +75,20 @@
     <img src="/archivos/imagen/seleccionBarra.png" alt="adorno">
         <h2 class="titulo_indicadores">SELECCIONE EL INDICADOR</h2>
         <div id="contenedor_indicadores">
-            <a href="/datos_generales" class="button">Familias</a>
-            <a href="/organizaciones" class="button">Organización</a>
-            <a href="/familias" class="button">Tenencia</a>
-            <a href="/alimento" class="button">Tierra</a>
-            <a href="/servicios"class="button">Ánimales</a>
-            <a href="/servicios"class="button">Cultivos</a>
-            <a href="/finca"class="button">Opciones de manejo</a>
-            <a href="/ingresos"class="button">Uso de semilla</a>
-            <a href="/equipos"class="button">Suelo</a>
-            <a href="/ahorro_credito" class="button">Ingresos</a>
-            <a href="/ahorro_credito" class="button">Bienes</a>
+            <a href="/familia" class="button">Familias</a>
+            <a href="/organizacion" class="button">Organización</a>
+            <a href="/tenencias" class="button">Tenencia</a>
+            <a href="/tierra" class="button">Tierra</a>
+            <a href="/animales"class="button">Ánimales</a>
+            <a href="/cultivos"class="button">Cultivos</a>
+            <a href="#"class="button">Opciones de manejo</a>
+            <a href="#"class="button">Uso de semilla</a>
+            <a href="/suelo"class="button">Suelo</a>
+            <a href="/ingresos" class="button">Ingresos</a>
+            <a href="/equipos" class="button">Bienes</a>
             <a href="/ahorro_credito" class="button">Ahorro y crédito</a>
-            <a href="/ahorro_credito" class="button">Seguridad alimentaria</a>
-            <a href="/ahorro_credito" class="button">Riesgos</a>
+            <a href="/segurida" class="button">Seguridad alimentaria</a>
+            <a href="/riesgo" class="button">Riesgos</a>
         </div>
     </div>
     {%endif%}
