--- a/monitoreo/templates/simas/riesgos.html
+++ b/monitoreo/templates/simas/riesgos.html
@@ -6,7 +6,9 @@
 
                         <div id="contenedor_igual">
                             <a href="#" class="educacion">Vulnerabilidad de la finca</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
                             <a href="#" class="educacion">Mitigación de riesgos</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
                         </div>
                         <div class="separador"></div>
 {% endblock %}
