--- a/monitoreo/templates/simas/suelo.html
+++ b/monitoreo/templates/simas/suelo.html
@@ -6,7 +6,9 @@
 
                         <div id="contenedor_igual">
                             <a href="/terreno" class="educacion">Carácteristicas del terreno</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
                             <a href="/manejo_suelo" class="educacion">Manejo del suelo</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
                         </div>
                         <div class="separador"></div>
 {% endblock %}
