--- a/monitoreo/templates/simas/tenencia.html
+++ b/monitoreo/templates/simas/tenencia.html
@@ -5,7 +5,8 @@
 {% block contenido %}
 
                         <div id="contenedor_igual">
-                            <a href="/tenencia" class="educacion">Tenencia</a>
+                            <a href="/tenencias" class="educacion">Tenencia</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
                         </div>
                         <div class="separador"></div>
 {% endblock %}
