--- a/monitoreo/templates/simas/ingreso.html
+++ b/monitoreo/templates/simas/ingreso.html
@@ -1,5 +1,6 @@
 {% extends "base.html"%}
 {% load humanize %}
+{% block titulo %}Subindicador Ingresos{% endblock %}
 {%load unslugify %}
 
 {% block extra_header %}
