--- a/monitoreo/templates/simas/inicio.html
+++ b/monitoreo/templates/simas/inicio.html
@@ -87,7 +87,7 @@
             <a href="/ingresos" class="button">Ingresos</a>
             <a href="/equipos" class="button">Bienes</a>
             <a href="/ahorro_credito" class="button">Ahorro y crédito</a>
-            <a href="/segurida" class="button">Seguridad alimentaria</a>
+            <a href="/seguridad" class="button">Seguridad alimentaria</a>
             <a href="/riesgo" class="button">Riesgos</a>
         </div>
     </div>
