--- a/monitoreo/templates/simas/agua.html
+++ b/monitoreo/templates/simas/agua.html
@@ -1,11 +1,24 @@
 {% extends "base.html" %}
 {%load unslugify %}
+{% block titulo %}Subindicador Agua{%endblock%}
 {% block contenido %}
+
+<div id="contenedor_igual">
+                            <a href="/educacion" class="educacion">Educación</a>
+                            <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/salud" class="educacion">Salud</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/luz"class="agua">Energia</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/agua"class="luz">Agua de consumo</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                        </div>
+                        <div class="separador"></div>
+                        <br></br>
+
+
 <div class="contenido">
-    <form action="#">
-        <label>Buscar en tabla: </label><input type="text" name="search" value="" id="id_search" placeholder="Search" autofocus />
-    </form>
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+     <table>
         <thead>
             <tr>
                 <th>Fuente</th>
@@ -22,17 +35,6 @@
         {%endfor%}
     </table>
 </div>
-<script>
-    // Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
-    // ademas que ordene por defecto las filas 0,0 y 2,1
-    $(document).ready(function()
-    {
-        //$("#table_example").tablesorter();
-        //$("#table_example").tablesorter({sortList:[[0,0],[2,1]], widgets: ['zebra']});
-        $("#table_example").tablesorter({sortList:[[1,0],[1,1]], widgets: ['zebra']});
-    }
-); 
-</script>
 <div class="separador"></div>
 
 <script type="text/javascript">
