--- a/monitoreo/templates/simas/animales.html
+++ b/monitoreo/templates/simas/animales.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {%load unslugify %}
-
+{% block titulo %}Subindicador animales {% endblock%}
 {% block contenido %}
 <div class="contenido">
     <table id="table_example" class="tablesorter" style="font-size:90%">
