--- a/monitoreo/templates/simas/cultivos.html
+++ b/monitoreo/templates/simas/cultivos.html
@@ -1,6 +1,6 @@
 {% extends "base.html"%}
 {%load unslugify %}
-
+{% block titulo %}Subindicador los Cultivos y la producción{% endblock %}
 {%block contenido%}
 <div class="contenido">
     <table id="table_example" class="tablesorter" style="font-size:90%">
