--- a/monitoreo/templates/simas/educacion.html
+++ b/monitoreo/templates/simas/educacion.html
@@ -1,6 +1,22 @@
 {% extends "base.html" %}
 {% load unslugify %}
+{%block titulo%}Subindicador Familias{%endblock%}
 {% block contenido %}
+
+<div id="contenedor_igual">
+                            <a href="/educacion" class="educacion">Educación</a>
+                            <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/salud" class="educacion">Salud</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/luz"class="agua">Energia</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/agua"class="luz">Agua de consumo</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                        </div>
+                        <div class="separador"></div>
+                        <br></br>
+
+
 <div class="contenido">
     <table id="table_example" class="tablesorter" style="font-size:90%">
         <caption>Educación</caption>
