--- a/monitoreo/templates/simas/salud.html
+++ b/monitoreo/templates/simas/salud.html
@@ -3,6 +3,19 @@
 {% block titulo %}Subindicador Salud{%endblock%}
 {% block contenido %}
 
+<div id="contenedor_igual">
+                            <a href="/educacion" class="educacion">Educación</a>
+                            <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/salud" class="educacion">Salud</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/luz"class="agua">Energia</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                            <a href="/agua"class="luz">Agua de consumo</a>
+                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                        </div>
+                        <div class="separador"></div>
+                        <br></br>
+
 <div id="sidebar">
     <div class="graficos_widget">
         <h1>Gráficos de Disponibilidad </h1>
