--- a/monitoreo/templates/simas/seguridad.html
+++ b/monitoreo/templates/simas/seguridad.html
@@ -1,6 +1,6 @@
 {% extends "base.html"%}
 {%load unslugify %}
-
+{% block titulo %}Subindicador Seguridad alimentaria{% endblock%}
 {% block contenido %}
 <div class="contenido">
     <table id="table_example" class="tablesorter" style="font-size:90%">
