--- a/monitoreo/templates/simas/tierra.html
+++ b/monitoreo/templates/simas/tierra.html
@@ -5,11 +5,10 @@
 {% block contenido %}
 
                         <div id="contenedor_igual">
-                            <a href="/uso_tierra" class="educacion">Uso de tierra</a>
+                            <a href="/fincas" class="educacion">Uso de tierra</a>
                              <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-                            <a href="/existencia" class="educacion">Existencia de árboles</a>
-                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-                            <a href="/reforestacion" class="educacion">Reforestación</a>
+                           
+                            <a href="/arboles" class="educacion">Existencia de árboles y Reforestación</a>
                              <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
                         </div>
                         <div class="separador"></div>
