reparando error en organizacion gremial

--- a/monitoreo/templates/simas/gremial.html
+++ b/monitoreo/templates/simas/gremial.html
@@ -114,9 +114,9 @@
     <thead>
         <tr>
             <th></th>
-            <th colspan="4">Integra Junta Directiva</th>
-            <th colspan="4">Es Miembro</th>
-            <th colspan="4">Rec Capacitacion    </th>
+            <th colspan="4">Es miembro gremial</th>
+            <th colspan="4">¿Está interesado en asumir cargo¿</th>
+            <th colspan="4">Recibe Capacitación</th>
         </tr>
         <tr>
             <th></th>
