--- a/monitoreo/media/css/style.css
+++ b/monitoreo/media/css/style.css
@@ -626,6 +626,8 @@ form.quicksearch img { vertical-align: middle; margin-left: 5px; }
 
 /* EL MENU DE LOS GRAFICOS */
 
+#sidebar{float:right;}
+
 .graficos_widget{
     width:240px;
     background: #dadada;
